--- a/Furniture-Moving-Project/src/main/resources/templates/admin/dashboard.html
+++ b/Furniture-Moving-Project/src/main/resources/templates/admin/dashboard.html
@@ -41,7 +41,7 @@
     <!-- Sidebar Start -->
     <div class="sidebar pe-4 pb-3">
         <nav class="navbar bg-light navbar-light">
-            <a href="#" class="navbar-brand mx-4 mb-3">
+            <a th:href="@{/admin/dashboard}" class="navbar-brand mx-4 mb-3">
                 <h3 class="text-primary"><i class="fa fa-hashtag me-2"></i>AdminOP</h3>
             </a>
 
@@ -58,16 +58,13 @@
             </div>
 
             <div class="navbar-nav w-100">
-                <a th:href="@{/admin/dashboard}" class="nav-item nav-link active">
-                    <i class="fa fa-tachometer-alt me-2"></i>Dashboard
-                </a>
 
                 <a th:href="@{/accountmanagement}" class="nav-item nav-link">
                     <i class="fa fa-th me-2"></i>Quản lí tài khoản
                 </a>
 
-                <a th:href="@{/admin/providers/stats}" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Thông tin nhà cung cấp</a>
-                <a th:href="@{/admin/customers/trends}" class="nav-item nav-link"><i class="fa fa-chart-line me-2"></i>Xu hướng khách hàngs</a>
+                <a th:href="@{/provider-stats}" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Thông tin nhà cung cấp</a>
+                <a th:href="@{/customer-trends}" class="nav-item nav-link"><i class="fa fa-chart-line me-2"></i>Xu hướng khách hàng</a>
 
             </div>
         </nav>
@@ -78,7 +75,7 @@
     <div class="content">
         <!-- Navbar Start -->
         <nav class="navbar navbar-expand bg-light navbar-light sticky-top px-4 py-0">
-            <a th:href="@{/}" class="navbar-brand d-flex d-lg-none me-4">
+            <a th:href="@{/admin/dashboard}" class="navbar-brand d-flex d-lg-none me-4">
                 <h2 class="text-primary mb-0"><i class="fa fa-hashtag"></i></h2>
             </a>
             <a href="#" class="sidebar-toggler flex-shrink-0">
